# Vulkaning

./: '  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ]  imgui.ini
assets/textures/tools/: ktx  toktx
shaders/: draw_slime.comp  draw_slime.comp.spv  mesh.vert  mesh.vert.spv  path_tracing.comp  path_tracing.comp.spv  path_tracing.frag  path_tracing.frag.spv  path_tracing.vert  path_tracing.vert.spv  path_tracing_camera.frag  path_tracing_camera.frag.spv  simple_color.comp  simple_color.comp.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  slime.comp  slime.comp.spv  triangle.frag  triangle.frag.spv  triangle.vert  update_slime.comp  water.frag  water.frag.spv  water.vert  water.vert.spv
shaders/aabb/: aabb_draw.frag  aabb_draw.vert  aabb_generate.comp
shaders/gi-renderer/: antialiasing.comp  test.vert
shaders/gizmo/: gizmo.frag  gizmo.vert
shaders/global-illumintaion/: gooch_shading.frag  lambertian_shading.frag  lambertian_shading.vert  test.frag  test.vert
shaders/vulkan-ray-tracing/: basic.rchit  basic.rgen  basic.rmiss
src/: CMakeLists.txt  main.cpp  ving_aabb.cpp  ving_aabb.hpp  ving_aabb_generator.cpp  ving_aabb_generator.hpp  ving_application.cpp  ving_application.hpp  ving_base_renderer.cpp  ving_base_renderer.hpp  ving_camera.cpp  ving_camera.hpp  ving_color.hpp  ving_core.cpp  ving_core.hpp  ving_defaults.cpp  ving_defaults.hpp  ving_descriptors.cpp  ving_descriptors.hpp  ving_engine.cpp  ving_engine.hpp  ving_gi_renderer.cpp  ving_gi_renderer.hpp  ving_gpu_buffer.cpp  ving_gpu_buffer.hpp  ving_image.cpp  ving_image.hpp  ving_imgui_renderer.cpp  ving_imgui_renderer.hpp  ving_mesh.cpp  ving_mesh.hpp  ving_obb.cpp  ving_obb.hpp  ving_path_tracing_renderer.cpp  ving_path_tracing_renderer.hpp  ving_present_queue.cpp  ving_present_queue.hpp  ving_profilers.cpp  ving_profilers.hpp  ving_render_context.cpp  (+25 more)
src/debug/: ving_logger.cpp  ving_logger.hpp
src/editor/: ving_gizmos.cpp  ving_gizmos.hpp
src/physics/: ving_ray.cpp  ving_ray.hpp
src/renderers/: ving_aabb_renderer.cpp  ving_aabb_renderer.hpp  ving_base_renderer.hpp  ving_gi_renderer.cpp  ving_gi_renderer.hpp  ving_gizmo_renderer.cpp  ving_gizmo_renderer.hpp  ving_imgui_renderer.hpp  ving_path_tracing_renderer.cpp  ving_path_tracing_renderer.hpp  ving_simple_cube_renderer.cpp  ving_simple_cube_renderer.hpp  ving_skybox_renderer.cpp  ving_skybox_renderer.hpp  ving_slime_renderer.hpp  ving_vulkan_raytracer.cpp  ving_vulkan_raytracer.hpp  ving_water_renderer.cpp  ving_water_renderer.hpp
